--- a/wizard/import_purchase_comprecibidos.xml
+++ b/wizard/import_purchase_comprecibidos.xml
@@ -7,36 +7,62 @@
         <field name="model">l10n_ar.import.purchase.comprecibidos.line</field>
         <field name="arch" type="xml">
             <form>
+                <field name="invoice_found" invisible="1" />
+                <field name="match_amount_taxed" invisible="1" />
+                <field name="match_amount_tax" invisible="1" />
+                <field name="match_amount_untaxed" invisible="1" />
+                <field name="match_amount_exempt" invisible="1" />
                 <field name="match_total_amount" invisible="1" />
 
                 <group col="2">
+                    <field name="invoice_display_name" />
                     <field name="date" edit="false" />
                     <field name="cuit" edit="false" />
                     <field name="vendor" edit="false" />
-                    <field name="invoice_display_name" />
                 </group>
 
+                <!-- TODO: separar en 2 grupos para simplificar logica.
+                Ademas hay un bug visual que muestra la barra entre field y label -->
                 <group col="4">
                     <field name="taxed_amount" />
-                    <field name="invoice_amount_total_taxed" />
-
-                    <field name="untaxed_amount" />
-                    <field name="invoice_amount_total_untaxed" />
-                    
-                    <field name="exempt_amount" />
-                    <field name="invoice_amount_total_exempt" />
+                    <field name="invoice_amount_total_taxed" 
+                        attrs="{'invisible': [('invoice_found', '=', False)]}"
+                        decoration-success="match_amount_taxed" 
+                        decoration-warning="not match_amount_taxed" />
+                    <newline />
 
                     <field name="iva_type" />
                     <newline />
 
                     <field name="iva" />
-                    <field name="invoice_amount_total_tax" />
+                    <field name="invoice_amount_total_tax" 
+                        attrs="{'invisible': [('invoice_found', '=', False)]}"
+                        decoration-success="match_amount_tax" 
+                        decoration-warning="not match_amount_tax" />
+                    <newline />
                     
                     <field name="difference" />
                     <newline />
+
+                    <field name="untaxed_amount" />
+                    <field name="invoice_amount_total_untaxed"
+                        attrs="{'invisible': [('invoice_found', '=', False)]}"
+                        decoration-success="match_amount_untaxed" 
+                        decoration-warning="not match_amount_untaxed" />
+                    <newline />
+                    
+                    <field name="exempt_amount" />
+                    <field name="invoice_amount_total_exempt" 
+                        attrs="{'invisible': [('invoice_found', '=', False)]}"
+                        decoration-success="match_amount_exempt" 
+                        decoration-warning="not match_amount_exempt" />
+                    <newline />
                     
                     <field name="total" />
-                    <field name="invoice_amount_total" decoration-success="match_total_amount" />
+                    <field name="invoice_amount_total"
+                        attrs="{'invisible': [('invoice_found', '=', False)]}" 
+                        decoration-success="match_total_amount" 
+                        decoration-warning="not match_total_amount" />
                 </group>
 
             </form>
@@ -83,22 +109,23 @@
 
                             <field name="invoice_ids" widget="section_and_note_one2many" options="{'reload_on_button': true}">
                                 <tree 
+                                    create="false"
                                     default_order="invoice_found, vendor, date"
                                     decoration-success="match_all"
                                     >
                                     
-                                    <!-- TODO: mostrar estado de importacion, y dialogo
-                                    con ayuda de simbolos + ordenamiento -->
-                                    <!-- TODO: retornar a comprobantes emitidos y ver de notificar success -->
+                                    <!-- TODO: sacar del mixin los matches -->
+                                    <!-- TODO: agregar signo pesos y monetary a los campos -->
+                                    <!-- TODO: mostrar estado de importacion, y dialogo con ayuda de simbolos -->
+                                    <!-- TODO  ver de notificar success -->
                                     <!-- TODO: ver facturas del mismo periodo y descargar -->
                                     <!-- TODO: cambiar width del proveedor -->
-                                    <!-- TODO: convertir a monetary -->
-                                    <!-- TODO: calcular warnings de mismatch. 
-                                        - Traerse el fix de price_include
-                                        - Si existe el comprobante no importar de vuelta
-                                    -->
 
                                     <field name="match_all" invisible="1" /> 
+                                    <field name="match_amount_taxed" invisible="1" />
+                                    <field name="match_amount_tax" invisible="1" />
+                                    <field name="match_amount_untaxed" invisible="1" />
+                                    <field name="match_amount_exempt" invisible="1" />
                                     <field name="match_total_amount" invisible="1" />
                                     <field name="invoice_found" invisible="1" />
 
@@ -108,14 +135,29 @@
                                     <field name="vendor" />
                                     <!-- todo: minimo width para este campo -->
                                     <field name="invoice_display_name" />
-                                    <field name="taxed_amount" />
-                                    <field name="untaxed_amount" />
-                                    <field name="exempt_amount" />
+                                    <field name="taxed_amount" sum="Total"
+                                        decoration-success="invoice_found and match_amount_taxed" 
+                                        decoration-warning="invoice_found and not match_amount_taxed"
+                                        decoration-bf="invoice_found and not match_amount_taxed" />
+                                    <field name="untaxed_amount" sum="Total"
+                                        decoration-success="invoice_found and match_amount_untaxed" 
+                                        decoration-warning="invoice_found and not match_amount_untaxed"
+                                        decoration-bf="invoice_found and not match_amount_untaxed" />
+                                    <field name="exempt_amount" sum="Total"
+                                        decoration-success="invoice_found and match_amount_exempt" 
+                                        decoration-warning="invoice_found and not match_amount_exempt"
+                                        decoration-bf="invoice_found and not match_amount_exempt"/>
                                     <!-- TODO: usar este campo -->
                                     <field name="iva_type" />
-                                    <field name="iva" />
-                                    <field name="difference" />
-                                    <field name="total" decoration-success="match_total_amount" />
+                                    <field name="iva" sum="Total"
+                                        decoration-success="invoice_found and match_amount_tax"
+                                        decoration-warning="invoice_found and not match_amount_tax"
+                                        decoration-bf="invoice_found and not match_amount_tax" />
+                                    <field name="difference" sum="Total" />
+                                    <field name="total" sum="Total"
+                                        decoration-success="invoice_found and match_total_amount" 
+                                        decoration-warning="invoice_found and not match_total_amount"
+                                        decoration-bf="invoice_found and not match_total_amount" />
                                 </tree>
                             </field>
                         </page>
