--- a/wizard/import_purchase_deducciones_arba.xml
+++ b/wizard/import_purchase_deducciones_arba.xml
@@ -29,6 +29,17 @@
                 <group string="Archivo" col="2">
                     <field name="arba_file" />
                 </group>
+
+                <div>
+                    <p>Verde: Las percepciones coinciden con los montos cargados en el sistema</p>
+                    <p>Naranja: Existe algun problema con esa percepción. Se listan a continuación las posibles causas:</p>
+                    <ul>
+                        <li>Percepcion Bancaria: no están asociadas a un comprobante particular, deben cargarse manualmente en el sistema.</li>
+                        <li>El comprobante donde se aplica la percepción no está cargado en el sistema. Debe cargarse primero el comprobante.</li>
+                        <li>El monto de la percepción excede el monto no gravado del comprobante. Al agregar la percepción, se modificará el monto total del comprobante.</li>
+                    </ul>
+                    <p>Azul: El monto No Gravado del comprobante no coincide con el de la percepción. La parte de la percepción se restará del monto no gravado.</p>
+                </div>
                 
                 <notebook string="Deducciones Cargadas" col="2">
                     <page string="Percepciones">
@@ -46,6 +57,7 @@
                                 <!-- Datos del archivo -->
                                 <field name="date" edit="false" />
                                 <field name="cuit" edit="false" />
+                                <!-- TODO: computar relacion por partner -->
                                 <field name="partner" />
                                 <field name="invoice_number" edit="false" />
                                 <field name="amount_agente" edit="false" sum="Total" />
@@ -53,10 +65,12 @@
                                 <field name="state" />
                                 
                                 <!-- Datos del comprobante asociado -->
-                                <field name="invoice_found" edit="false" />
-                                <field name="amount2" edit="false" sum="Total" />
-                                <field name="inv_perc_iibb" edit="false" sum="Total" />
-                                <field name="diff" edit="false" />
+                                <!-- TODO: Borrar esto -->
+                                <!-- TODO: hacer un search inverse (buscar el comprobante, y cambiar el valor de invoice_number)-->
+                                <field name="invoice_found" edit="false" optional="hide" />
+                                <field name="amount2" edit="false" sum="Total" optional="hide" />
+                                <field name="inv_perc_iibb" edit="false" sum="Total" optional="hide" />
+                                <field name="diff" edit="false" optional="hide" />
                             </tree>
                         </field>
                     </page>
