--- a/static/src/css/web_login_style.css
+++ b/static/src/css/web_login_style.css
@@ -8,3 +8,12 @@
 a[href='https://www.odoo.com?utm_source=db&amp;utm_medium=auth'] {
     display: none;
 } */
+
+#wrapwrap {
+    background-color: #5B6670;
+}
+
+/* .btn-primary {
+    background-color: #1D3557;
+    border-color: #1D3557;
+} */
