--- a/report/report_iva_f2002.xml
+++ b/report/report_iva_f2002.xml
@@ -220,9 +220,9 @@
                 <p t-else=""><b>Saldo Libre disponibilidad a favor del Responsable: $<t t-esc="saldo_libre_disp"></t></b></p>
 
                 <h5>Retenciones</h5>
-                <p>Retenciones Sufridas: $0.00</p> <!-- Regimen 17 -->
-                <p>Percepciones Impositivas Sufridas: $0.00</p> <!-- Regimen 493 -->
-                <p><b>Total: $<t t-esc="saldo_libre_disp"></t></b></p>
+                <p>Retenciones Sufridas: $<t t-esc="ingresos_retenciones" /></p> <!-- Regimen 17 -->
+                <p>Percepciones Impositivas Sufridas: $<t t-esc="ingresos_percepciones" /></p> <!-- Regimen 493 -->
+                <p><b>Total: $<t t-esc="saldo_total_afip"></t></b></p>
                 <!-- SEGUNDO PARRAFO -->
                 
             </div>
