--- a/wizard/arba_report_views.xml
+++ b/wizard/arba_report_views.xml
@@ -75,93 +75,126 @@
     </record>
 
     <!-- REPORTE DE IIBB ARBA - FORM VIEW -->
-    <record id="view_iibb_arba_wizard" model="ir.ui.view">
-        <field name="name">l10n_ar.iibb.arba.wizard</field>
+    <record id="view_iibb_arba_wizard_form" model="ir.ui.view">
+        <field name="name">l10n_ar.iibb.arba.wizard.form</field>
         <field name="model">l10n_ar.iibb.arba.wizard</field>
         <field name="arch" type="xml">
             <form string="DD.JJ. Mensual de Ingresos Brutos ARBA">
+                <header>
+                    <field name="state" widget="statusbar" statusbar_visible="draft,presented"/>
+                </header>
 
-                <group string="Configuración" col="4">
-                    <field name="iibb_report_date_from" />
-                    <field name="iibb_report_date_to" />
-                </group>
+                <sheet>
+                    <field name="company_id" invisible="1" />
+                    <group>
+                        <field name="date_from" />
+                        <field name="date_to" />
+                    </group>
 
-                <button name="calculate_iibb" string="Calcular" type="object" class="btn-primary" />
+                    <button name="calculate_iibb" string="Calcular" type="object" class="btn-primary" />
 
-                <!-- TODO: habilitar esto luego de haber presionado el boton "Calcular" -->
-                <notebook>
-                    <page string="Resumen">
-                        <group string="Reporte Generado" col="2">
-                            <field name="iibb_report_sale_total" readonly="1" />
-                            <field name="iibb_company_tax_percentage" readonly="1" />
-                            <field name="iibb_company_min_amount" readonly="1" />
-                            <field name="iibb_report_tax_subtotal" decoration-bf="1" />
-                            <separator />
-                            <field name="iibb_report_percepciones" readonly="1" />
-                            <field name="iibb_report_retenciones" readonly="1" />
-                            <field name="iibb_report_retenciones_bancarias" readonly="1" />
-                            <field name="iibb_report_devoluciones_bancarias" readonly="1" />
-                            <field name="iibb_report_deducciones" readonly="1" decoration-bf="1" />
-                            <separator />
-                            <field name="iibb_report_tax_prev_saldo" readonly="1" />
-                            <field name="iibb_report_tax_total_saldo"
-                                decoration-bf="iibb_report_tax_total_saldo > 0"
-                                decoration-success="iibb_report_tax_total_saldo > 0" />
-                            <field name="iibb_report_tax_total_to_pay" 
-                                decoration-bf="iibb_report_tax_total_to_pay > 0"
-                                decoration-danger="iibb_report_tax_total_to_pay > 0" />
-                        </group>
-                    </page>
-                    <page string="Percepciones">    
-                        <group>
-                            <field nolabel="1" name="iibb_percepciones">
+                    <!-- TODO: habilitar esto luego de haber presionado el boton "Calcular" -->
+                    <notebook>
+                        <page string="Resumen">
+                            <group string="Reporte Generado" col="2">
+                                <field name="iibb_report_sale_total" readonly="1" />
+                                <field name="iibb_company_tax_percentage" readonly="1" />
+                                <field name="iibb_company_min_amount" readonly="1" />
+                                <field name="iibb_report_tax_subtotal" decoration-bf="1" />
+                                <separator />
+                                <field name="iibb_report_percepciones" readonly="1" />
+                                <field name="iibb_report_retenciones" readonly="1" />
+                                <field name="iibb_report_retenciones_bancarias" readonly="1" />
+                                <field name="iibb_report_devoluciones_bancarias" readonly="1" />
+                                <field name="iibb_report_deducciones" readonly="1" decoration-bf="1" />
+                                <separator />
+                                <field name="iibb_report_tax_prev_saldo" readonly="1" />
+                                <field name="iibb_report_tax_total_saldo"
+                                    decoration-bf="1" decoration-success="1"
+                                    attrs="{'invisible': [('iibb_report_tax_total_saldo', '&gt;', 0)]}" />
+                                <field name="iibb_report_tax_total_to_pay" 
+                                    decoration-bf="1" decoration-danger="1"
+                                    attrs="{'invisible': [('iibb_report_tax_total_to_pay', '&lt;=', 0)]}" />
+                            </group>
+                        </page>
+                        <page string="Percepciones">    
+                            <group>
+                                <field nolabel="1" name="iibb_percepciones">
+                                    <tree>
+                                        <field name="date" />
+                                        <field name="amount" />
+                                        <field name="move_id" />
+                                    </tree>
+                                </field>
+                            </group>
+                        </page> 
+                        <!-- TODO: agregar percepciones no tomadas del mes anterior -->
+                        <!-- TODO: agregar widget="switch" para tomar/no tomar percepciones -->
+                        <page string="Retenciones">
+                            <group>
+                                <field nolabel="1" name="iibb_retenciones">
+                                    <tree>
+                                        <field name="date" />
+                                        <field name="amount" />
+                                    </tree>
+                                </field>
+                            </group>
+                        </page> 
+                        <page string="Retenciones Bancarias">
+                            <group>
+                                <field nolabel="1" name="iibb_retenciones_bancarias">
+                                    <tree>
+                                        <field name="date" />
+                                        <field name="amount" />
+                                    </tree>
+                                </field>
+                            </group>
+                        </page>
+                        <page string="Devoluciones Bancarias">
+                            <group>
+                                <field nolabel="1" name="iibb_devoluciones_bancarias">
+                                    <tree>
+                                        <field name="date" />
+                                        <field name="amount" />
+                                    </tree>
+                                </field>
+                            </group>
+                        </page>
+                        <page string="Asiento Contable">
+                            <!-- TODO: permitir editar el asiento -->
+                            <field name="line_ids">
                                 <tree>
                                     <field name="date" />
-                                    <field name="amount" />
-                                    <field name="move_id" />
+                                    <field name="account_id" />
+                                    <field name="partner_id" />
+                                    <field name="name" />
+                                    <field name="debit" />
+                                    <field name="credit" />
                                 </tree>
                             </field>
-                        </group>
-                    </page> 
-                    <!-- TODO: agregar percepciones no tomadas del mes anterior -->
-                    <!-- TODO: agregar widget="switch" para tomar/no tomar percepciones -->
-                    <page string="Retenciones">
-                        <group>
-                            <field nolabel="1" name="iibb_retenciones">
-                                <tree>
-                                    <field name="date" />
-                                    <field name="amount" />
-                                </tree>
-                            </field>
-                        </group>
-                    </page> 
-                    <page string="Retenciones Bancarias">
-                        <group>
-                            <field nolabel="1" name="iibb_retenciones_bancarias">
-                                <tree>
-                                    <field name="date" />
-                                    <field name="amount" />
-                                </tree>
-                            </field>
-                        </group>
-                    </page>
-                    <page string="Devoluciones Bancarias">
-                        <group>
-                            <field nolabel="1" name="iibb_devoluciones_bancarias">
-                                <tree>
-                                    <field name="date" />
-                                    <field name="amount" />
-                                </tree>
-                            </field>
-                        </group>
-                    </page>
-                </notebook>
+                        </page>
+                    </notebook>
 
-                <footer>
-                    <!-- TODO: not ready yet -->
-                    <!-- <button name="generate_iibb" string="Generar" type="object" class="btn-primary" /> -->
-                </footer>
+                    <footer>
+                        <!-- TODO: not ready yet -->
+                        <!-- <button name="generate_iibb" string="Generar" type="object" class="btn-primary" /> -->
+                    </footer>
+                </sheet>
             </form>
+        </field>
+    </record>
+    
+    <!-- REPORTE DE IIBB ARBA - TREE VIEW -->
+    <record id="view_iibb_arba_wizard_tree" model="ir.ui.view">
+        <field name="name">l10n_ar.iibb.arba.wizard.tree</field>
+        <field name="model">l10n_ar.iibb.arba.wizard</field>
+        <field name="arch" type="xml">
+            <tree>
+                <field name="name" />
+                <field name="date_from" />
+                <field name="date_to" />
+                <field name="state" />
+            </tree>
         </field>
     </record>
 
@@ -169,8 +202,8 @@
     <record id="action_iibb_arba_wizard" model="ir.actions.act_window">
         <field name="name">DD.JJ. ARBA</field>
         <field name="res_model">l10n_ar.iibb.arba.wizard</field>
-        <field name="view_mode">form</field>
-        <field name="target">new</field>
+        <field name="view_mode">tree,form</field>
+        <field name="target">main</field>
     </record>
 
     <!--
