--- a/templates/basic.xml
+++ b/templates/basic.xml
@@ -11,6 +11,7 @@
         <template id="assets_backend" inherit_id="web.assets_common">
             <xpath expr="//script[last()]" position="after">
                 <script type="text/javascript" src="/pyme_accounting/static/src/js/session.js"></script>
+                <script type="text/javascript" src="/pyme_accounting/static/src/js/report_monotributo_anual.js"></script>
             </xpath>
         </template>
 
